Fix wrong paddings

--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ nav {
 }
 
 nav a {
-  padding: 14px 20px 10px 20px;
+  padding: 10px 20px 10px 20px;
   color: #424242;
   text-decoration: none;
   text-align: center;
